--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -11,12 +11,17 @@
         color: var(--background-color);
         transform: translateX(calc((abstracts.$nav-width - abstracts.$bar-spacing) * -1));
         transition: transform 400ms;
+
+        &.active {
+            width: auto;
+            transform: translateX(0);
+        }
     }
 
-    .sidebar.active {
-        width: auto;
-        transform: translateX(0);
-    }
+    // .sidebar.active {
+    //     width: auto;
+    //     transform: translateX(0);
+    // }
 
     .navigation {
         display: flex;
@@ -40,16 +45,25 @@
     .nav-button {
         padding: 0.7rem 0;
         color: var(--text-color);
+
+        &.active {
+            color: var(--accent-color);
+            box-shadow: inset 0 0 999px 999px var(--nav-active);
+        }
+
+        &:hover {
+            box-shadow: inset 0 0 999px 999px rgba(255, 255, 255, 0.5);
+        }
     }
     
-    .nav-button:hover {
-        box-shadow: inset 0 0 999px 999px rgba(255, 255, 255, 0.5);
-    }
+    // .nav-button:hover {
+    //     box-shadow: inset 0 0 999px 999px rgba(255, 255, 255, 0.5);
+    // }
     
-    .nav-button.active {
-        color: var(--accent-color);
-        box-shadow: inset 0 0 999px 999px var(--nav-active);
-    }
+    // .nav-button.active {
+    //     color: var(--accent-color);
+    //     box-shadow: inset 0 0 999px 999px var(--nav-active);
+    // }
     
     .nav-aside {
         margin-top: abstracts.$top-spacing;
@@ -60,11 +74,15 @@
         border-radius: 0 5px 5px 0;
         padding: 0 0.3rem;
         background-color: var(--accent-color);
+
+        &:hover {
+            box-shadow: inset 0 0 999px 999px rgba(255, 255, 255, 0.5);
+        }
     }
     
-    .nav-tag:hover {
-        box-shadow: inset 0 0 999px 999px rgba(255, 255, 255, 0.5);
-    }
+    // .nav-tag:hover {
+    //     box-shadow: inset 0 0 999px 999px rgba(255, 255, 255, 0.5);
+    // }
 
     .theme {
         margin-top: auto;
@@ -102,12 +120,17 @@
     
     .nav-button {
         color: var(--text-color);
+
+        &.active {
+            color: var(--accent-color);
+            /* box-shadow: inset 0 0 1px 1px rgba(255, 255, 255, 0.1); */
+        }
     }
     
-    .nav-button.active {
-        color: var(--accent-color);
-        /* box-shadow: inset 0 0 1px 1px rgba(255, 255, 255, 0.1); */
-    }
+    // .nav-button.active {
+    //     color: var(--accent-color);
+    //     /* box-shadow: inset 0 0 1px 1px rgba(255, 255, 255, 0.1); */
+    // }
     
     .nav-aside {
         display: none;
